--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Book an appointment</title>
+  <title>Test Appointment Website</title>
   <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="container">
-    <h1>Contoso Clinic</h1>
+    <h1>Test Appointment Website</h1>
     <p>Simple appointment booking</p>
   </header>
 
@@ -21,7 +21,7 @@
     </div>
   </main>
 
-  <footer class="container muted">© <span id="year"></span> Contoso Clinic</footer>
+  <footer class="container muted">© <span id="year"></span> Test Appointment Website</footer>
 
   <script src="/script.js" defer></script>
 </body>
