--- a/public/terms.html
+++ b/public/terms.html
@@ -47,16 +47,21 @@
       const fd = new FormData(e.currentTarget);
       const payload = Object.fromEntries(fd.entries());
       payload.termsAccepted = !!payload.termsAccepted;
-      const r = await fetch('/api/appointments', {
-        method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(payload)
-      });
-      const out = document.getElementById('status');
-      if (!r.ok) {
-        const { error } = await r.json();
-        out.textContent = error || 'Error';
-        return;
+      try {
+        const r = await fetch('/api/appointments', {
+          method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(payload)
+        });
+        const out = document.getElementById('status');
+        if (!r.ok) {
+          let msg = 'Error';
+          try { const j = await r.json(); msg = j.error || msg; } catch {}
+          out.textContent = msg;
+          return;
+        }
+        out.textContent = 'Check your email to confirm. The provider will confirm too.';
+      } catch (err) {
+        document.getElementById('status').textContent = 'Network error';
       }
-      out.textContent = 'Check your email to confirm. The provider will confirm too.';
     });
   </script>
 </body>
